profile and artists logic

--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -6,4 +6,8 @@
   <div class="user-name">
     {{profile.user?.username}}
   </div>
+  <div>
+    <h5>{{profile.name}} {{profile.familyName}}</h5>
+  </div>
+
 </a>
