--- a/frontend/src/app/components/user/user.component.scss
+++ b/frontend/src/app/components/user/user.component.scss
@@ -2,6 +2,12 @@
   display: flex;
   align-items: center;
   gap: 16px;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 10px;
+  max-width: 400px;
+  text-decoration: none;
+  color: #000;
 
   .user-image {
     width: 50px;
