--- a/frontend/src/app/pages/profile/profile-form/profile-form.component.html
+++ b/frontend/src/app/pages/profile/profile-form/profile-form.component.html
@@ -13,5 +13,8 @@
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
+
+  <mat-label>Изображение профиля</mat-label>
+  <input type="file" id="avatar" (change)="onChange($event)">
   <button mat-button type="submit">Принять изменения</button>
 </form>
