--- a/frontend/src/app/pages/artists/artist-short/artist-short.component.html
+++ b/frontend/src/app/pages/artists/artist-short/artist-short.component.html
@@ -1,9 +1,17 @@
-<a class="artist" routerLink="/artist/{{artist.id}}">
+<!--<a class="artist" routerLink="/artist/{{artist.id}}">-->
 
-  <img class="artist-image" [src]="artist.logoUrl
-    || 'https://firebasestorage.googleapis.com/v0/b/bsu-musicians.appspot.com/o/avatar.jpg?alt=media&token=5e5f0e15-8893-491c-8573-ea4ebd6e5abe'
-    " alt="">
+<!--  <img class="artist-image" [src]="artist.logoUrl-->
+<!--    || 'https://firebasestorage.googleapis.com/v0/b/bsu-musicians.appspot.com/o/avatar.jpg?alt=media&token=5e5f0e15-8893-491c-8573-ea4ebd6e5abe'-->
+<!--    " alt="">-->
+<!--  <div class="artist-name">-->
+<!--    {{artist.name}}-->
+<!--  </div>-->
+<!--</a>-->
+
+<a class="artist" routerLink="/artist/{{ artist.id }}">
+  <mat-icon class="icon">music_note</mat-icon>
+  <img class="artist-image" [src]="artist.logoUrl || 'https://firebasestorage.googleapis.com/v0/b/bsu-musicians.appspot.com/o/avatar.jpg?alt=media&token=5e5f0e15-8893-491c-8573-ea4ebd6e5abe '" alt="Логотип исполнителя">
   <div class="artist-name">
-    {{artist.name}}
+    {{ artist.name }}
   </div>
 </a>
