--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,10 +1,45 @@
+//.app {
+//  display: flex;
+//  max-width: 1240px;
+//  margin: auto;
+//  gap: 10px;
+//  .content {
+//    padding: 10px;
+//    width: 100%;
+//  }
+//}
+
 .app {
   display: flex;
-  max-width: 1240px;
-  margin: auto;
-  gap: 10px;
-  .content {
-    padding: 10px;
-    width: 100%;
+  min-height: 100vh;
+  background-color: #1e1e2f;
+  color: #ffffff;
+
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    z-index: 1000;
+    background-color: #1e1e2f;
+  }
+
+  .main-content {
+    margin-left: 280px; // Подстраивается под ширину navbar
+    flex: 1;
+    padding: 2rem;
+    background-color: #12121c;
+    min-height: 100vh;
+    overflow-y: auto;
+    box-sizing: border-box;
+  }
+}
+
+// Адаптация под мобильные устройства
+@media (max-width: 768px) {
+  .app .main-content {
+    margin-left: 0;
+    padding: 1rem;
   }
 }
