--- a/frontend/src/app/pages/profiles/profiles.component.html
+++ b/frontend/src/app/pages/profiles/profiles.component.html
@@ -1,5 +1,11 @@
+<!--<div class="profiles">-->
+<!--  @for(profile of (profiles$ | async); track profile.id){-->
+<!--  <app-user [profile]="(profile)"></app-user>-->
+<!--  }-->
+<!--</div>-->
+
 <div class="profiles">
-  @for(profile of (profiles$ | async); track profile.id){
-  <app-user [profile]="(profile)"></app-user>
+  @for(profile of (profiles$ | async); track profile.id) {
+    <app-user [profile]="profile"></app-user>
   }
 </div>
